# lce_dc

./: README.md  pyproject.toml  requirements.txt
Data_simulation/: Data_generation_DAG.R  LCP_rule_functions.R
Results_collation/: collate_results.R
cfg/: config.yml
src/lce/: __main__.py  config.py  load_data.py  run_all_models.py  utils.py
src/lce/evaluation/: metrics.py
src/lce/visualisation/: plot_results.py
